# ASDfR

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/asg1_2/lib/asg1_2/: sequence_controller
install/asg1_2/share/asg1_2/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cam2image_vm2ros/lib/cam2image_vm2ros/: cam2image
install/cam2image_vm2ros/share/cam2image_vm2ros/: package.sh
install/filterer/share/filterer/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/filterer/share/filterer/cmake/: filtererConfig.cmake
install/lightdetector/share/lightdetector/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/relbot_simulator/share/relbot_simulator/: package.sh
install/tracker/share/tracker/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tracker/share/tracker/cmake/: trackerConfig.cmake
log/: latest_build
set1/: README.md  run_ros_vid.sh
set1/answers/: answers.txt
set1/src/asg1_2/: CMakeLists.txt
set1/src/asg1_2/src/: 1_2_3.cpp
set1/src/cam2image_vm2ros/config/: cam2image.yaml
set1/src/filterer/src/: greyscaler.cpp  masker.cpp
set1/src/light_detector/: CMakeLists.txt
set1/src/light_detector/src/: lightdetector.cpp  lightprinter.cpp
set1/src/tracker/src/: tracker.cpp
set2/: answers.txt  performance_timer.cpp  performance_timer.h  plot_results.py  softime.cpp
set2/asg2_3_results/: timing_results --ros-args -p reliability:=reliable -p history:=keep_all -p depth:=10 -p durability:=volatile_no_stress.csv  timing_results --ros-args -p reliability:=reliable -p history:=keep_all -p depth:=10 -p durability:=volatile_with_stresss.csv  timing_results_--ros-args -p reliability:=best_effort -p history:=keep_last -p depth:=1 -p durability:=volatile_no_stress.csv  timing_results_--ros-args -p reliability:=best_effort -p history:=keep_last -p depth:=1 -p durability:=volatile_withstress.csv  timing_results_default_no_stress.csv  timing_results_with_stress.csv
set2/ros_time/: CMakeLists.txt  package.xml  readme.txt
set2/ros_time/include/ros_time/: Loop15.h  Seq15.h
set2/ros_time/src/: loop15.cpp  seq15.cpp
set3/: .gitignore  README.txt
set3/ass1/: README.txt
set3/ass1/launch/: launch.py
set3/ass1/src/asg1_2/: ReadmeAssignment1_2.txt  package.xml
set3/ass1/src/asg1_2/launch/: start_relbot.launch.py
set3/ass1/src/asg1_2/src/: imgsqcontrol.cpp  sequence_controller.cpp
set3/ass1/src/bot_controller/: CMakeLists.txt  ReadmeAssignment1_2.txt  package.xml
set3/ass1/src/bot_controller/launch/: start_relbot.launch.py
set3/ass1/src/bot_controller/src/: bot_controller.cpp
set3/ass1/src/filterer/: CMakeLists.txt  README.txt  package.xml
set3/ass1/src/filterer/src/: masker.cpp
set3/ass1/src/tracker/: CMakeLists.txt  README.txt  package.xml
set3/ass1/src/tracker/src/: tracker.cpp
set3/ass2/: README.md  start_fsm.sh
set3/ass2/launch/: launch.py
set3/ass2/src/20sim/: LoopController_tokens.xml
set3/ass2/src/asg1_2/: CMakeLists.txt
set3/ass2/src/asg1_2/src/: bot_controller.cpp
set3/ass2/src/group15/: CMakeLists.txt  main.cpp
set3/ass2/src/group15/controller/: LoopController.cpp  LoopController.h  LoopController.info  test_LoopController.cpp
set3/ass2/src/group15/include/: Group15.hpp
set3/ass2/src/group15/src/: Group15.cpp
set3/ass2/src/wheel_tester/: CMakeLists.txt  README.txt  package.xml
set3/ass2/src/wheel_tester/src/: main.cpp
set3/ass3/: README.md
set3/ass3/src/asg1_2/: CMakeLists.txt
set3/ass3/src/asg1_2/src/: convert2xeno.cpp
set3/ass3/src/group15/: CMakeLists.txt  main.cpp
set3/ass3/src/group15/controller/: LoopController.cpp  RELbotSimple.emx  test_LoopController.cpp
set3/ass3/src/group15/controller/common/: MotionProfiles.cpp  MotionProfiles.h  xxfuncs.h  xxinteg.cpp  xxmatrix.cpp  xxmodel.h  xxtypes.h
set3/ass3/src/group15/include/: Group15.hpp
set3/ass3/src/group15/src/: Group15.cpp
set3/ass3/src/light_detector/: CMakeLists.txt  package.xml
set3/ass3/src/tracker/: package.xml
set3/ass3/src/wheel_tester/: CMakeLists.txt  README.txt  package.xml
set3/ass3/src/wheel_tester/src/: main.cpp
set3/ass4/: README.md
set3/ass4/launch/: launch.py
set3/ass4/src/asg1_2/: package.xml
set3/ass4/src/asg1_2/src/: bot_controller.cpp  convert2xeno.cpp  imgsqcontrol.cpp  sequence_controller.cpp
set3/ass4/src/bot_controller/: CMakeLists.txt  package.xml
set3/ass4/src/bot_controller/src/: bot_controller.cpp
set3/ass4/src/filterer/src/: greyscaler.cpp  masker.cpp
set3/ass4/src/group15/: README.txt
set3/ass4/src/group15/controller/: LoopController.h  LoopController_tokens.xml
set3/ass4/src/group15/controller/common/: EulerAngles.cpp  xxfuncs.cpp  xxinverse.cpp  xxinverse.h
set3/ass4/src/group15/src/: Group15.cpp
set3/ass4/src/wheel_tester/: package.xml
set3/dependencies/20Sim/20Sim/20simEmpty/: LoopController.cpp  LoopController.h  LoopController_tokens.xml  asdfr15_model1.emx  test_LoopController.cpp
set3/dependencies/20Sim/20Sim/20simEmpty/common/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
set3/dependencies/20Sim/20Sim/20simGiven/common/: EulerAngles.h  xxinteg.h  xxmatrix.h
