<?xml version="1.0"?>
<package format="3">
  <name>bot_controller</name>
  <version>0.0.1</version>
  <description>Assignment package for RELbot simulation</description>

  <maintainer email="f.heinen@student.utwente.nl">Floris Heinen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>xrf2_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
